test/files/neg/t2509-4.check
t2509-4.scala:31: error: value value is not a member of B
    println("B: " + b.value)
                      ^
one error found
